# pd-hybrid-synth

./: .gitignore  CMakeLists.txt  FEATURE_ROADMAP.md  HANDOFF.md  PERFORMANCE_ANALYSIS.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
scripts/: make_icon.ps1  run_pluginval.ps1
src/dsp/: AllpassDispersion.cpp  AllpassDispersion.h  AnalogOscillator.cpp  AnalogOscillator.h  Arpeggiator.cpp  Arpeggiator.h  Biquad.h  Chorus.cpp  Chorus.h  CombFilter.cpp  CombFilter.h  Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  FilterUnit.cpp  FilterUnit.h  GlobalEq.cpp  GlobalEq.h  LadderFilter.cpp  LadderFilter.h  Lfo.cpp  Lfo.h  MasterStage.cpp  MasterStage.h  ModMatrix.cpp  ModMatrix.h  MonoBass.cpp  MonoBass.h  MultiStageEnvelope.cpp  MultiStageEnvelope.h  OscEq.cpp  OscEq.h  OscillatorUnit.cpp  OscillatorUnit.h  OverdriveAmp.cpp  OverdriveAmp.h  Oversampler.cpp  Oversampler.h  PhaseDistortionOscillator.cpp  (+24 more)
src/plugin/: CrtOverlay.cpp  CrtOverlay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  ScopeDisplay.h  SynthLookAndFeel.h
tests/: CMakeLists.txt
tests/dsp/: amp_tests.cpp  analog_oscillator_tests.cpp  arpeggiator_tests.cpp  chorus_tests.cpp  compressor_tests.cpp  delay_tests.cpp  envelope_tests.cpp  filter_tests.cpp  global_eq_tests.cpp  master_stage_tests.cpp  modulation_tests.cpp  mono_bass_tests.cpp  nontraditional_filter_tests.cpp  osc_eq_tests.cpp  oscillator_tests.cpp  pluck_resonator_tests.cpp  reverb_tests.cpp  scanned_oscillator_tests.cpp  svf_tests.cpp  synth_tests.cpp  voice_mode_tests.cpp  vosim_oscillator_tests.cpp  vps_oscillator_tests.cpp  walsh_oscillator_tests.cpp
tests/harness/: EnvelopeProbe.h  Fft.cpp  Fft.h  FrequencyResponse.h  Invariance.h  SignalStats.h  Spectrum.cpp  Spectrum.h
